# IdleOptimizer

./: .gitignore  CMakeLists.txt  LICENSE  OpenGUI.bat  README.md  config.example.json  config.json  run_latest.txt  run_log.txt
.github/workflows/: build_cmake.yml
IdleOptimizer_14day_v7_full/: .gitignore  CMakeLists.txt  README.md  RunWithLog.bat  runner.bat
IdleOptimizer_14day_v7_full/assets/: optimizer_gui.html
IdleOptimizer_14day_v7_full/src/: config_loader.hpp  main.cpp
assets/: config.json  optimizer_gui.html
main/assets/: optimizer_gui.html
release/: LICENSE  README.md  config.json
release/assets/: optimizer_gui.html
src/: config_loader.hpp  constants.hpp  main.cpp
